simplify and unit test navigation link helpers

--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -21,12 +21,12 @@ this.triggerNavItem(id)
                     <%= desktop_navigation_link(name: "home", path: root_path) %>
                     <%= desktop_navigation_link(name: "photography", path: photography_path) %>
                     <%= desktop_navigation_link(name: "blog",        path: blog_posts_path) %>
-                    <%= scrolling_desktop_navigation_link(name: "about",      path: "#about",      request_path: request.path) %>
-                    <%= scrolling_desktop_navigation_link(name: "work",       path: "#work",       request_path: request.path) %>
-                    <%= scrolling_desktop_navigation_link(name: "games",      path: "#games",      request_path: request.path) %>
-                    <%= scrolling_desktop_navigation_link(name: "videos",     path: "#videos",     request_path: request.path) %>
-                    <%= scrolling_desktop_navigation_link(name: "latest",     path: "#latest",       request_path: request.path) %>
-                    <%= scrolling_desktop_navigation_link(name: "contact",    path: "#contact",    request_path: request.path) %>
+                    <%= scrolling_desktop_navigation_link(name: "about",      path: "#about") %>
+                    <%= scrolling_desktop_navigation_link(name: "work",       path: "#work") %>
+                    <%= scrolling_desktop_navigation_link(name: "games",      path: "#games") %>
+                    <%= scrolling_desktop_navigation_link(name: "videos",     path: "#videos") %>
+                    <%= scrolling_desktop_navigation_link(name: "latest",     path: "#latest") %>
+                    <%= scrolling_desktop_navigation_link(name: "contact",    path: "#contact") %>
                 </ul>
             </div>
 
@@ -51,12 +51,12 @@ this.triggerNavItem(id)
                 <%= mobile_navigation_link(name: 'home', path: root_path) %>
                 <%= mobile_navigation_link(name: 'photography', path: photography_path) %>
                 <%= mobile_navigation_link(name: "blog",        path: blog_posts_path) %>
-                <%= scrolling_mobile_navigation_link(name: "about",      path: "#about",      request_path: request.path) %>
-                <%= scrolling_mobile_navigation_link(name: "work",       path: "#work",       request_path: request.path) %>
-                <%= scrolling_mobile_navigation_link(name: "games",      path: "#games",      request_path: request.path) %>
-                <%= scrolling_mobile_navigation_link(name: "videos",     path: "#videos",     request_path: request.path) %>
-                <%= scrolling_mobile_navigation_link(name: "latest",     path: "#latest",       request_path: request.path) %>
-                <%= scrolling_mobile_navigation_link(name: "contact",    path: "#contact",    request_path: request.path) %>
+                <%= scrolling_mobile_navigation_link(name: "about",      path: "#about") %>
+                <%= scrolling_mobile_navigation_link(name: "work",       path: "#work") %>
+                <%= scrolling_mobile_navigation_link(name: "games",      path: "#games") %>
+                <%= scrolling_mobile_navigation_link(name: "videos",     path: "#videos") %>
+                <%= scrolling_mobile_navigation_link(name: "latest",     path: "#latest") %>
+                <%= scrolling_mobile_navigation_link(name: "contact",    path: "#contact") %>
             </ul>
         </div>
     </div>
