replace turbolinks with turbo

--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -39,7 +39,7 @@ html[lang="en"]
     = stylesheet_pack_tag 'application'
     
     - # this is the webpack insertion point, including ALL tailwind CSS imported by application.js...so confusing
-    = javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' 
+    = javascript_pack_tag 'application', 'data-turbo-track': 'reload'
     
     = yield :head 
     = csrf_meta_tags
