--- a/app/views/photography/index.html.slim
+++ b/app/views/photography/index.html.slim
@@ -3,8 +3,8 @@
 
 - content_for :page_title, 'Photography Gallery'
 - content_for :head do
-  = javascript_pack_tag 'photography', 'data-turbolinks-track': 'reload'
-  = stylesheet_pack_tag 'photography', 'data-turbolinks-track': 'reload'
+  = javascript_pack_tag 'photography', 'data-turbo-track': 'reload'
+  = stylesheet_pack_tag 'photography', 'data-turbo-track': 'reload'
 
 - # thumbnail gallery
 .my-gallery.grid.are-images-unloaded itemscope="" itemtype="http://schema.org/ImageGallery"
