--- a/app/views/blog/posts/index.html.erb
+++ b/app/views/blog/posts/index.html.erb
@@ -5,9 +5,10 @@
     <div class="container py-6 md:py-10">          
       <% @posts.each do |post| %>
         <div class="max-w-4xl mx-auto mb-20 border-b pb-5 border-lila" id="post-<%= post.id %>" role="article"  itemscope='' itemtype='http://schema.org/Article'>
-          <% # .post-thumbnail = image_tag post.featured_image_url if post.featured_image_url.present? %>
           <%= render partial: 'meta', locals: { post: post } %>
-          <div class="pt-8 prose max-w-none" itemprop="articleBody">
+
+          <div class="pt-8 prose max-w-full" itemprop="articleBody">
+            <%= image_tag post.featured_image_url, class: ".post-thumbnail" if post.featured_image_url.present? %>
             <%= markdown post.excerpt %>
             <% if post.more_text? %>
               <a href="<%= blog_posts_permalink_path(post) %>" class="flex items-center no-underline">
