--- a/app/views/blog/posts/show.html.erb
+++ b/app/views/blog/posts/show.html.erb
@@ -8,7 +8,7 @@
             <%= render partial: 'meta', locals: { post: @post } %>
 
             <% # post %>
-            <div class="pt-8 prose max-w-none" itemprop="articleBody">
+            <div class="pt-8 prose max-w-full" itemprop="articleBody">
                 <%= image_tag @post.featured_image_url if @post.featured_image_url.present? %>
                 <%= markdown @post.body %>
             </div>
