--- a/app/views/home/_about.html.erb
+++ b/app/views/home/_about.html.erb
@@ -6,17 +6,17 @@
             <h4 class="font-header font-medium text-black text-xl sm:text-2xl lg:text-3xl pt-6">
                 Technical and Creative</h4>
             <p class="font-body text-grey-20 pt-6 leading-relaxed">
-                I have over <%= Time.now.year - 2011 %> years of professional experience as a <span class="font-black">Software Engineer</span> at prestigious,
-                successful companies in the San Francisco Bay Area.
+                I have <%= Time.now.year - 2011 %> years of professional experience as a <span class="font-black">Software Engineer</span> at industry leading companies in the San Francisco Bay Area.
             </p>
             <p class="font-body text-grey-20 pt-6 leading-relaxed">
-                I've built an identity provider at Onelogin,
-                an online store platform integrated with YouTube and Amazon at Teespring,
-                and a Simulation System which enables Lyft to serve thousands of rides per minute during holidays and events.
+                At <span class="font-black">Lyft</span> my team built a Simulation System which allows the business to handle thousands of rides per minute during our busiest moments.
+                I led the team at <span class="font-black">Teespring</span> who created the online store platform which integrates with YouTube.
+                I built an identity provider at <span class="font-black">Onelogin</span> which enables mobile app single sign on.
+
             </p>
             <p class="font-body text-grey-20 pt-6 leading-relaxed">
                 But unlike most developers who focus solely on technical ability,
-                I am also a deeply creative person with a passion for good design and captivating storytelling.
+                I am also a <span class="font-black">deeply creative person</span> with a passion for good design and captivating storytelling.
             </p>
             <div class="flex flex-col sm:flex-row justify-center lg:justify-start pt-6">
                 <div class="flex justify-center sm:justify-start items-center">
