--- a/app/views/home/_contact.html.erb
+++ b/app/views/home/_contact.html.erb
@@ -5,7 +5,7 @@
     <h4 class="font-header font-medium text-black text-xl sm:text-2xl lg:text-3xl pt-6 text-center">
         Have Any Questions?</h4>
     <div class="w-full sm:w-2/3 mx-auto pt-5 lg:pt-6 text-center">
-        <p class="font-body text-grey-10">Please feel free to reach out. No question is too simple, no job is too large.</p>
+        <p class="font-body text-grey-10">Please feel free to reach out. No question is too simple, no job is too complex.</p>
     </div>
 
     <%= render partial: "shared/contact_me", locals: { form_classes: "mx-auto", request_route: root_path } %>
