--- a/app/views/home/_videos.html.erb
+++ b/app/views/home/_videos.html.erb
@@ -4,7 +4,7 @@
             class="font-header font-semibold text-primary text-4xl sm:text-5xl lg:text-6xl uppercase text-center">
             Videos</h2>
         <h3 class="font-header font-medium text-black text-xl sm:text-2xl lg:text-3xl pt-6 text-center">
-            A Few of my Favorite Short Films from
+            The Best Short Films from
             <a href="https://youtube/com/benradler" target="_blank" class="text-primary">my YouTube Channel</a>
         </h3>
 
