--- a/app/views/home/_work.html.erb
+++ b/app/views/home/_work.html.erb
@@ -37,8 +37,8 @@
                                     Software Engineer</span>
                                 <div class="pt-2">
                                     <span class="font-body text-black block">
-                                        Built and maintained Simulated Rides and Acceptance Testing platforms, allowing
-                                        Lyft to ensure it can scale safely for peak events and holidays.
+                                        Built and maintained Simulated Rides and Acceptance Testing platforms, ensuring
+                                        Lyft can handle peak scale for the busiest moments.
                                     </span>
                                 </div>
                             </div>
