--- a/app/views/home/_expertise.html.erb
+++ b/app/views/home/_expertise.html.erb
@@ -3,7 +3,7 @@
         class="font-header font-semibold text-primary text-4xl sm:text-5xl lg:text-6xl uppercase text-center">
         Expertise</h2>
     <h3 class="font-header font-medium text-black text-xl sm:text-2xl lg:text-3xl pt-6 text-center">
-        Over a Decade of Mastery in Creative & Technical Disciplines</h3>
+        <%= Time.now.year - 2011 %> Years in Creative & Technical Disciplines</h3>
 
     <div class="grid grid-cols-1 sm:grid-cols-3 lg:grid-cols-3 gap-6 md:gap-10 pt-10 md:pt-12">
         <div class="shadow px-8 py-12 hover:bg-primary group rounded">
