--- a/app/views/home/_about.html.erb
+++ b/app/views/home/_about.html.erb
@@ -6,17 +6,19 @@
             <h4 class="font-header font-medium text-black text-xl sm:text-2xl lg:text-3xl pt-6">
                 Technical and Creative</h4>
             <p class="font-body text-grey-20 pt-6 leading-relaxed">
-                I have <%= Time.now.year - 2011 %> years of professional experience as a <span class="font-black">Software Engineer</span> at industry leading companies in the San Francisco Bay Area.
+                I have <%= number_to_human(Time.now.year - 2011) %> years of professional experience as a <span class="font-black">Software Engineer</span> at industry-leading companies in the San Francisco Bay Area.
             </p>
             <p class="font-body text-grey-20 pt-6 leading-relaxed">
-                At <span class="font-black">Lyft</span> my team built a Simulation System which allows the business to handle thousands of rides per minute during our busiest moments.
-                I led the team at <span class="font-black">Teespring</span> who created the online store platform which integrates with YouTube.
-                I built an identity provider at <span class="font-black">Onelogin</span> which enables mobile app single sign on.
-
+                At <span class="font-black">Lyft</span>, my team built a Simulation System which allows the business to handle thousands of rides per minute during our busiest moments.
+                At <span class="font-black">Teespring</span>, I led a team that created the online store platform which enables merchandise sales on YouTube.
+                At <span class="font-black">Onelogin</span>, I built an identity provider which enables mobile app single sign on.
             </p>
             <p class="font-body text-grey-20 pt-6 leading-relaxed">
-                But unlike most developers who focus solely on technical ability,
-                I am also a <span class="font-black">deeply creative person</span> with a passion for good design and captivating storytelling.
+                Unlike many developers who focus solely on technical ability,
+                I am a <span class="font-black">deeply creative person</span>
+                with a passion for good design and captivating storytelling.
+                My experiences with film, design, and other creative outlets fuel
+                my <span class="font-black">curiosity and inventiveness</span> as an engineer.
             </p>
             <div class="flex flex-col sm:flex-row justify-center lg:justify-start pt-6">
                 <div class="flex justify-center sm:justify-start items-center">
