--- a/app/views/home/_expertise.html.erb
+++ b/app/views/home/_expertise.html.erb
@@ -3,7 +3,7 @@
         class="font-header font-semibold text-primary text-4xl sm:text-5xl lg:text-6xl uppercase text-center">
         Expertise</h2>
     <h3 class="font-header font-medium text-black text-xl sm:text-2xl lg:text-3xl pt-6 text-center">
-        <%= Time.now.year - 2011 %> Years in Creative & Technical Disciplines</h3>
+        <%= Time.now.year - 2011 %> Years in Creative and Technical Disciplines</h3>
 
     <div class="grid grid-cols-1 sm:grid-cols-3 lg:grid-cols-3 gap-6 md:gap-10 pt-10 md:pt-12">
         <div class="shadow px-8 py-12 hover:bg-primary group rounded">
@@ -20,7 +20,7 @@
                     class="font-semibold  text-lg lg:text-xl text-primary uppercase pt-8 group-hover:text-yellow">
                     Software Engineering</h3>
                 <p class="text-sm md:text-base text-grey pt-4 group-hover:text-white">
-                    Frontend & Backend Development using Microservices.
+                    Frontend and backend development using microservices.
                 </p>
             </div>
         </div>
@@ -39,7 +39,7 @@
                     class="font-semibold  text-lg lg:text-xl text-primary uppercase pt-8 group-hover:text-yellow">
                     <span class="normal-case">iOS</span> Game Development</h3>
                 <p class="text-sm md:text-base text-grey pt-4 group-hover:text-white">
-                    2D Arcade Style Games built with SpriteKit.
+                    2D arcade-style games built with SpriteKit.
                 </p>
             </div>
         </div>
@@ -58,7 +58,7 @@
                     class="font-semibold  text-lg lg:text-xl text-primary uppercase pt-8 group-hover:text-yellow">
                     Film & Photography</h3>
                 <p class="text-sm md:text-base text-grey pt-4 group-hover:text-white">
-                    Product Photography, Advertisement Spots, and Short Films.
+                    Product photography, advertisement spots, and short films.
                 </p>
             </div>
         </div>
