--- a/app/views/home/_games.html.erb
+++ b/app/views/home/_games.html.erb
@@ -72,7 +72,7 @@
                 <div class="flex items-center justify-center lg:justify-start">
                     <i class="bx bxs-star text-5xl text-primary mr-5 p0"></i>
                     <h4 class="font-header font-normal text-black uppercase">
-                        <%= "5 Star " %>
+                        <%= "5-Star " %>
                         <span class="text-primary font-black">
                             Rating
                         </span>
