--- a/app/views/home/_work.html.erb
+++ b/app/views/home/_work.html.erb
@@ -1,8 +1,7 @@
 <div class="bg-cover bg-no-repeat xs:bg-[center_top_1000rem] lg:bg-top pb-16 xl:px-16"
     style="background-image:url(<%= asset_pack_path("media/images/home/experience-figure.svg") %>)" id="work">
     <div class="bg-white w-5/6 md:w-11/12 2xl:w-full mx-auto py-16 lg:py-20 xl:py-24">
-        <h2
-            class="font-header font-semibold text-primary text-4xl sm:text-5xl lg:text-6xl uppercase text-center">
+        <h2 class="font-header font-semibold text-primary text-4xl sm:text-5xl lg:text-6xl uppercase text-center">
             Work Experience</h2>
         <h3 class="font-header font-medium text-black text-xl sm:text-2xl lg:text-3xl pt-6 text-center">
             San Francisco Based Technology Companies</h3>
@@ -17,8 +16,7 @@
                             <%= image_pack_tag "home/logo-lyft.svg", class: "w-48 h-16 relative -top-5", alt: "company logo" %>
                         </span>
                         <div class="relative w-full ml-6 hidden md:block">
-                            <span
-                                class="h-0.5 bg-grey-70 absolute inset-x-0 top-3 transform -translate-y-1/2"></span>
+                            <span class="h-0.5 bg-grey-70 absolute inset-x-0 top-3 transform -translate-y-1/2"></span>
                         </div>
                     </div>
                 </div>
@@ -32,8 +30,7 @@
                             <div class="md:pl-8 md:-mt-1">
                                 <span class="font-body font-bold text-grey-40 block">
                                     Apr 2017 - <%= Time.now.strftime("%b %Y") %></span>
-                                <span
-                                    class="font-header font-bold text-xl text-primary uppercase block pt-2">
+                                <span class="font-header font-bold text-xl text-primary uppercase block pt-2">
                                     Software Engineer</span>
                                 <div class="pt-2">
                                     <span class="font-body text-black block">
@@ -53,8 +50,7 @@
                             <%= image_pack_tag "home/logo-teespring.svg", class: "w-48 h-auto", alt: "company logo" %>
                         </span>
                         <div class="relative w-full ml-6 hidden md:block">
-                            <span
-                                class="h-0.5 bg-grey-70 absolute inset-x-0 top-1/2 transform -translate-y-1/2"></span>
+                            <span class="h-0.5 bg-grey-70 absolute inset-x-0 top-1/2 transform -translate-y-1/2"></span>
                         </div>
                     </div>
                 </div>
@@ -70,10 +66,12 @@
                                     Sep 2015 - Mar 2017
                                 </span>
                                 <span
-                                    class="font-header font-bold text-xl text-primary uppercase block pt-2">Engineering Manager</span>
+                                    class="font-header font-bold text-xl text-primary uppercase block pt-2">Engineering
+                                    Manager</span>
                                 <div class="pt-2">
                                     <span class="font-body text-black block">
-                                        Architect of Teespring Storefronts product, widely used by online influencers for 
+                                        Architect of Teespring Storefronts product, widely used by online influencers
+                                        for
                                         mechandise sales on sites such as YouTube.
                                     </span>
                                 </div>
@@ -89,8 +87,7 @@
                             <%= image_pack_tag "home/logo-onelogin.svg", class: "w-48 h-auto relative -top-2", alt: "company logo" %>
                         </span>
                         <div class="relative w-full ml-6 hidden md:block">
-                            <span
-                                class="h-0.5 bg-grey-70 absolute inset-x-0 top-3 transform -translate-y-1/2"></span>
+                            <span class="h-0.5 bg-grey-70 absolute inset-x-0 top-3 transform -translate-y-1/2"></span>
                         </div>
                     </div>
                 </div>
@@ -104,12 +101,12 @@
                             <div class="md:pl-8 md:-mt-1">
                                 <span class="font-body font-bold text-grey-40 block">May 2013 - Aug
                                     2015</span>
-                                <span
-                                    class="font-header font-bold text-xl text-primary uppercase block pt-2">
+                                <span class="font-header font-bold text-xl text-primary uppercase block pt-2">
                                     Software Engineer</span>
                                 <div class="pt-2">
                                     <span class="font-body text-black block">
-                                        Led development on the NAPPS infrastructure that powers OneLogin's Native Mobile Application single-sign-on platform.
+                                        Led development on the NAPPS infrastructure that powers OneLogin's Native Mobile
+                                        Application Single Sign-on platform.
                                     </span>
                                 </div>
                             </div>
@@ -117,6 +114,13 @@
                     </div>
                 </div>
             </div>
+        </div>
+        <div class="flex justify-center mt-8">
+            <a href="https://www.linkedin.com/in/benradler/" target="_blank"
+                class="bg-primary hover:bg-grey-20 font-header font-bold text-lg text-white px-8 py-3 flex justify-center mt-5 rounded items-center uppercase">
+                Connect with me on LinkedIn
+                <i class="bx bxl-linkedin-square text-3xl relative -right-2"></i>
+            </a>
         </div>
     </div>
 </div>
