--- a/app/views/home/_videos.html.erb
+++ b/app/views/home/_videos.html.erb
@@ -4,8 +4,8 @@
             class="font-header font-semibold text-primary text-4xl sm:text-5xl lg:text-6xl uppercase text-center">
             Videos</h2>
         <h3 class="font-header font-medium text-black text-xl sm:text-2xl lg:text-3xl pt-6 text-center">
-            Watch The Best Short Films from
-            <a href="https://youtube/com/benradler" target="_blank" class="text-primary">my YouTube Channel</a>
+            Watch the Best Short Films From
+            <a href="https://youtube/com/benradler" target="_blank" class="text-primary">My YouTube Channel</a>
         </h3>
 
         <div class="grid grid-cols-1 sm:grid-cols-1 lg:grid-cols-3 gap-6 md:gap-10 pt-10 md:pt-12">
@@ -16,7 +16,7 @@
                         class="font-semibold  text-lg lg:text-xl text-primary uppercase pt-8">
                         BMW Advertisement</h3>
                     <p class="text-sm md:text-base text-grey pt-4 px-4">
-                        Mock advertisement for <span class="font-black">The Ultimate Driving Machine</span>
+                        A mock advertisement for <span class="font-black">The Ultimate Driving Machine</span>
                     </p>
                 </div>
             </div>
@@ -28,7 +28,7 @@
                         class="font-semibold  text-lg lg:text-xl text-primary uppercase pt-8">
                         The Storm</h3>
                     <p class="text-sm md:text-base text-grey pt-4 px-4">
-                        A Short, <span class="font-black">Super-Slow-Motion</span> Cinematic film about Snow
+                        a short, <span class="font-black">super-slow-motion</span> cinematic film about snow
                     </p>
                 </div>
             </div>
