--- a/app/views/home/_videos.html.erb
+++ b/app/views/home/_videos.html.erb
@@ -49,7 +49,7 @@
         <div class="flex justify-center mt-8">
             <a href="https://youtube.com/benradler" target="_blank"
                 class="bg-primary hover:bg-grey-20 font-header font-bold text-lg text-white px-8 py-3 flex justify-center mt-5 rounded items-center uppercase">
-                Visit YouTube Channel
+                My YouTube Channel
                 <i class="bx bxl-youtube text-3xl relative -right-2"></i>
             </a>
         </div>
