--- a/app/views/home/_videos.html.erb
+++ b/app/views/home/_videos.html.erb
@@ -28,7 +28,7 @@
                         class="font-semibold  text-lg lg:text-xl text-primary uppercase pt-8">
                         The Storm</h3>
                     <p class="text-sm md:text-base text-grey pt-4 px-4">
-                        a short, <span class="font-black">super-slow-motion</span> cinematic film about snow
+                        A short, <span class="font-black">super-slow-motion</span> cinematic film about snow
                     </p>
                 </div>
             </div>
