--- a/app/views/home/_blog.html.erb
+++ b/app/views/home/_blog.html.erb
@@ -13,8 +13,9 @@
                     <span
                         class="bg-cover bg-no-repeat bg-center absolute inset-0 opacity-10 transition-opacity group-hover:opacity-50 block bg-gradient-to-b from-blog-gradient-from to-blog-gradient-to"></span>
                     <span
-                        class="font-body font-bold text-sm md:text-base text-white border-2 border-white block px-6 py-2 uppercase rounded-full text-center absolute right-0 bottom-0 mr-4 mb-4">Read
-                        More</span>
+                        class="font-body font-bold text-sm md:text-base bg-primary text-white border-2 border-white block px-6 py-2 uppercase rounded-full text-center absolute right-0 bottom-0 mr-4 mb-4">
+                        Read More
+                    </span>
                 </div>
                 <div class="py-6 xl:py-8 px-5">
                     <span class="font-body font-semibold text-lg text-black block"><%= post.title %></span>
