--- a/app/views/shared/_social_icons.html.slim
+++ b/app/views/shared/_social_icons.html.slim
@@ -2,7 +2,7 @@
 
 div[class=" flex items-center justify-center sm:justify-start pt-5 sm:pt-0 pl-2"]
   a href="https://www.linkedin.com/in/benradler/" title="LinkedIn" 
-    i[class="bx bxl-linkedin text-2xl #{icon_classes}"]
+    i[class="bx bxl-linkedin-square text-2xl #{icon_classes}"]
   a.pl-4 href="https://github.com/lordnibbler/" title="Github" 
     i[class="bx bxl-github text-2xl #{icon_classes}"]
   a.pl-4 href="https://stackoverflow.com/users/418864/professormeowingtons" title="StackOverflow" 
