--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -8,7 +8,7 @@
     }
 }"> 
     <% # desktop navigation %>
-    <div class="w-full z-50 top-0 py-3 sm:py-5 <%= @navigation_class %> ">
+    <div class="desktop-nav w-full z-50 top-0 py-3 sm:py-5 fixed bg-primary/0 transition ease-in-out duration-300">
         <div class="container flex justify-between items-center">
             <div>
                 <a href="/" class="uppercase text-white text-2xl sm:text-4xl">
