--- a/app/views/shared/_page.html.slim
+++ b/app/views/shared/_page.html.slim
@@ -1,5 +1,5 @@
 div id="#{controller_name}-#{action_name}"
-  .container.py-6.md:py-10
+  div[class="container py-6 md:py-10 mt-12 sm:mt-16 lg:mt-24 xl:mt-16"]
     .max-w-4xl.mx-auto
       h1.font-body.font-semibold.text-primary.text-3xl.sm:text-4xl.md:text-5xl.xl:text-6xl.pt-5
         = yield(:page_title)
