--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -11,7 +11,7 @@
     <div class="desktop-nav fixed transition ease-in-out duration-300 w-full z-50 top-0 py-3 sm:py-5 <%= @navigation_class %>">
         <div class="container flex justify-between items-center">
             <div>
-                <a href="/" class="uppercase text-white text-2xl sm:text-4xl">
+                <a href="/" class="uppercase text-white text-2xl sm:text-4xl lg:text-2xl xl:text-4xl">
                     <span class="font-black">Radler</span> <span class="font-thin">Designs</span>
                 </a>
             </div>
