Add offset on  on nav

--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,6 +1,6 @@
 <div x-data="{
     triggerNavItem(id) {
-        $scroll(id)
+        $scroll(id, { offset: 40 })
     },
     triggerMobileNavItem(id) {
         $parent.mobileMenu = false;
