--- a/app/views/shared/_social_icons.html.slim
+++ b/app/views/shared/_social_icons.html.slim
@@ -1,11 +1,11 @@
 - icon_classes ||= ""
 
-div[class=" flex items-center justify-center sm:justify-start pt-5 sm:pt-0 pl-2"]
-  a href="https://www.linkedin.com/in/benradler/" title="LinkedIn" 
+div[class="flex items-center justify-center sm:justify-start pt-5 sm:pt-0"]
+  a href="https://www.linkedin.com/in/benradler/" title="LinkedIn"
     i[class="bx bxl-linkedin-square text-2xl #{icon_classes}"]
-  a.pl-4 href="https://github.com/lordnibbler/" title="Github" 
+  a.pl-4 href="https://github.com/lordnibbler/" title="Github"
     i[class="bx bxl-github text-2xl #{icon_classes}"]
-  a.pl-4 href="https://stackoverflow.com/users/418864/professormeowingtons" title="StackOverflow" 
+  a.pl-4 href="https://stackoverflow.com/users/418864/professormeowingtons" title="StackOverflow"
     i[class="bx bxl-stack-overflow text-2xl #{icon_classes}"]
   a.pl-4 href="https://youtube.com/benradler" title="YouTube"
     i[class="bx bxl-youtube text-2xl #{icon_classes}"]
