add og:image:type meta tag

--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -18,6 +18,7 @@ html[lang="en"]
     meta[property="og:url" content="//"]
     meta[property="og:site_name" content="Radler Designs - benradler.com"]
     meta[property="og:image" content="#{asset_pack_url("media/images/layout/social.jpg")}"]
+    meta[property="og:image:type" content="image/jpeg"]
     meta[property="og:type" content="website"]
 
     - # twitter
