--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -40,7 +40,7 @@ html[lang="en"]
     meta[name="twitter:description" content="qwerty"]
     meta[name="twitter:card" content="summary_large_image"]
 
-    link[rel="canonical" href="//"]
+    link[rel="canonical" href="#{root_url}"]
     link[rel="icon" type="image/png" href="#{asset_pack_url("media/images/layout/favicon.png")}"]
 
     - # for browsers/devices which customize UI based on theme
