--- a/app/javascript/packs/active_admin/active_admin.scss
+++ b/app/javascript/packs/active_admin/active_admin.scss
@@ -25,6 +25,16 @@
 .formtastic.blog_post {
   a.default-button {
     @include default-button;
+    margin: 5px;
+    &.danger-button {
+      background-image: linear-gradient(180deg, #f22, #f55);
+      color: white;
+      text-shadow: none;
+      border: 1px solid #f00;
+      &:hover {
+        background-image: linear-gradient(180deg, #f33, #f99);
+      }
+    }
   }
   td, .columns {
     display: flex;
