--- a/app/views/admin/blog_posts/_form.html.slim
+++ b/app/views/admin/blog_posts/_form.html.slim
@@ -4,23 +4,30 @@
     - f.input :title
     - f.input :description
     - f.input :featured_image_url, as: :string
-    - f.input :user_id, as: :select, collection: User.all.map{ |u| [u.name, u.id] }
+    - f.input :user_id, as: :select, collection: User.all.map { |u| [u.name, u.id] }
     - f.input :created_at
     - f.input :updated_at
-    - f.input :featured_image, as: :file
+    - f.input :featured_image
+    - if f.object.featured_image.attached?
+      - li do
+        - label "Featured Image (attached)"
+        - span do
+          - link_to(image_tag(url_for(f.object.featured_image.representation(resize_to_limit: [300, nil]).processed)), cdn_image_url(f.object.featured_image))
+        - span do
+          - a "Original", href: cdn_image_url(f.object.featured_image), class: "default-button"
     - f.input :images, as: :file, input_html: { multiple: true }
     - div class: 'columns' do
       - f.object.images.each do |img|
         - div class: 'image_container' do
           - div link_to(image_tag(img, width: 200), url_for(img))
           - span do
-            - processed = img.representation(resize_to_fit: [300, nil]).processed
+            - processed = img.representation(resize_to_limit: [300, nil]).processed
             - a "300", href: cdn_image_url(processed), class: "default-button"
           - span do
-            - processed = img.representation(resize_to_fit: [640, nil]).processed
+            - processed = img.representation(resize_to_limit: [640, nil]).processed
             - a "640", href: cdn_image_url(processed), class: "default-button"
           - span do
-            - processed = img.representation(resize_to_fit: [1024, nil]).processed
+            - processed = img.representation(resize_to_limit: [1024, nil]).processed
             - a "1024", href: cdn_image_url(processed), class: "default-button"
           - span do
             - a "Original", href: cdn_image_url(img), class: "default-button"
